<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/edit_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="numberDecimal"
        android:hint="@string/distance" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/total_km"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/edit_price"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/price"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/price_per_liter" />

    <EditText
        android:id="@+id/edit_autonomy"
        android:textSize="20sp"
        android:autofillHints="quantofaz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/autonomy"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/km_liter" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45sp"
        android:gravity="center"
        android:text="@string/total_spend"
        android:textAllCaps="true"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_total_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="10sp"
        android:gravity="center"
        android:text="@string/total_value"
        android:textAllCaps="true"
        android:textColor="@color/dark_blue"
        android:textSize="38sp" />

    <Button
        android:id="@+id/button_calculate"
        android:layout_width="367dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/teal_700"
        android:padding="16dp"
        android:rotationX="2"
        android:text="@string/calculate"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="normal" />
</LinearLayout>